--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 # or operating system, you probably want to add a global ignore instead:
 #   git config --global core.excludesfile '~/.gitignore_global'
 
+.env
+
 # Ignore bundler config.
 /.bundle
 
@@ -12,6 +14,7 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
+
 
 # Ignore Byebug command history file.
 .byebug_history
